# CoreAI-Distributed-Inference-Platform

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DOCUMENTATION.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  docker-compose.yml  pyproject.toml
docker/: README.md
docs/: README.md
gateway/: Dockerfile  __init__.py  config.py  main.py  monitoring.py  schemas.py
gateway/services/: __init__.py  queue_service.py  registry_service.py  result_service.py
monitoring/: prometheus.yml
shared/: __init__.py  redis_client.py  reliability.py
tests/: __init__.py  test_gateway.py  test_monitoring.py  test_redis_layer.py  test_registry_service.py  test_reliability.py  test_result_retrieval.py  test_worker.py
worker/: Dockerfile  __init__.py  config.py  heartbeat.py  main.py  model_runner.py
