[project]
name = "coreai-distributed-inference-platform"
version = "1.0.0"
description = "A simplified, high-performance Azure OpenAI style inference serving platform using FastAPI, PyTorch, Redis queues, and Docker."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "CoreAI Team", email = "coreai-eng@microsoft.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "redis>=5.0.5",
    "prometheus-client>=0.20.0",
    "python-dotenv>=1.0.1",
    "torch>=2.3.1",
    "transformers>=4.41.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.8",
    "httpx>=0.27.0",
]

[tool.ruff]
# Target Python version 3.12
target-version = "py312"
line-length = 100

# Enable all recommended Ruff rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # McCabe complexity
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["gateway", "worker", "shared"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
